Fixing padding gap

--- a/src/components/footer/footer.component.styles.scss
+++ b/src/components/footer/footer.component.styles.scss
@@ -18,7 +18,7 @@
         padding: 10px 0px;
     }
     &_section{
-        padding: 10px;
+        padding: 5px;
         align-content: space-between;
         width: 100%;
         text-align: justify;
@@ -59,7 +59,7 @@
 @media only screen and (max-width: 788px) {
     .footer{
         flex-direction: column;
-        padding: 0 22px;
+        padding: 0 11px;
         h3 {
             text-align: left;
         }
